--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resource-toolkit",
-  "version": "0.0.0-development",
+  "version": "0.0.1",
   "description": "Async resource management util.",
   "main": "./src/index.ts",
   "engines": {
