--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=12.0.0"
   },
   "scripts": {
+    "build": "rollup -c",
     "lint": "eslint . && npm run lint:lockfile",
     "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --validate-https --allowed-hosts npm yarn",
     "lint:fix": "eslint . --fix",
@@ -55,6 +56,8 @@
     "lockfile-lint": "^2.0.1",
     "open-cli": "^5.0.0",
     "prettier": "^1.18.2",
+    "rollup": "^1.29.1",
+    "rollup-plugin-typescript2": "^0.25.3",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.7.5"
   },
