--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resource-toolkit",
   "version": "0.1.0",
   "description": "Async resource management util.",
-  "main": "./src/index.ts",
+  "main": "dist/bundle.js",
   "engines": {
     "node": ">=12.0.0"
   },
