--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "type": "git",
     "url": "https://github.com/mazuh/resource-toolkit.git"
   },
-  "dependencies": {
-    "@babel/preset-env": "^7.8.3"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/preset-env": "^7.8.7",
     "@babel/preset-typescript": "^7.8.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^7.1.2",
