--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/preset-env": "^7.8.7",
+    "@babel/compat-data": "^7.13.12",
+    "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.8.3",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^7.1.2",
